sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: ';' expected but '=' found.
    stock:Int=getValeur(k)
             ^AlgInsertionSort:7: error: ';' expected but '=' found.
      compa:Int=getValeur(l)
               ^